# proteum

./: .cshrc  CMakeLists.txt  LICENSE  Makefile  README  README.md  README.pt-br  bin-date  manual-proteumim.tgz  randtable.h
btree/: bglob.c  bt.c  btlib.c  btlib.h  btree.c  btree.h
checkequiv/: maincheq.c
doc/: manual-proteumim.ps
example/: Cal.c
exemuta/: exelog.c  exemuta.c  exemuta.old.c  mainexmu.c  montamuta.c  selemuta.c
instrum/: instrum.c  instrumbuild.c  maininst.c
li/: mainli.c
li/lib/: analex.c  callgr.c  chave.h  gfc.c  gravali.c  li.h  nanasin.c  parser.c  ptar.c  rotsem.c  simbtab.c
lib/: disco.c  disco.h  gerais.c  gerais.h  globais.c  globais.h  ttymodes.c
misc/: extimout.c  headtail.c  recinput.c  splitarg.c  testrand.c
muta/: mainmuta.c
muta/lib/: arqfunc.c  arqmuta.c  muta.h
opmuta/: mainopmu.c
opmuta/lib/: argincr.c  argneg.c  covnode.c  delarg.c  delfunc.c  delret.c  fase1.c  fase2.c  fase2.old.c  glob.c  loadfunc.c  mutgera.c  observations.c  opmuta.c  opmuta.h  reparg.c  repret.c  reqcons.c  swalike.c  swdif.c  tmpcon.c  u-cccr.c  u-ccdl.c  u-ccsr.c  u-crcr.c  u-obom.c  u-ocng.c  u-ocor.c  u-oido.c  u-oipm.c  u-olbng.c  u-oodl.c  u-sbrc.c  u-sbrn.c  u-scrn.c  u-sdwd.c  u-sglr.c  u-smtc.c  u-smvb.c  (+24 more)
polonesa/: extipo.c  pgerais.c  polonesa.c  polonesa.h
pteste/: mainptes.c  pteste.c  pteste.h
report/: mainrep.c  report.c  reptrace.c
src/: CMakeLists.txt
tcase/: maintcas.c
test/: CMakeLists.txt  null.c  set  test_set.c  util.c
util/: info-muta.c  list-good.c  muta-gen.c  muta-viw.c  tcase-ad.c  test-cre.c
(+27 files in other folders)
